--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -1,34 +1,108 @@
 body {
   margin: 0;
+  font-family: 'Montserrat', sans-serif;
 }
-
-
-.App {
+main {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+
+
+
+/* SideBar..... */
+
+
+p{
+  color: rgb(0, 0, 0);
+  font-size: xx-large;
+
+
+
+}
+.headerparent{
+  text-align:justify;
+}
+  
+.buttons {
+  display: flex;
+ 
+  justify-content: right;
+  
+
+}
+.types {
+  word-spacing: 5vh;
+  margin-right: 4vh;
+
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+#webname{
+  font-size: 2vh;
+  font-weight:bold;
+  margin-left: 5vh;
+  margin-top: 5vh;
+}
+/* SideBar..... */
+
+/* HomePage..... */
+
+.profilecard{
+background-color: rgba(248, 241, 223, 0.67);
+border-top-left-radius:15vh;
+border-bottom-left-radius:15vh;
+width: 80vh;
+height: 25.1vh;
+border-top-right-radius: 5vh;
+border-bottom-right-radius: 5vh;
+text-align: center;
+}
+.majorhomediv{
+  margin-top: 30vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.textdiv {
+  display: flex;
+  justify-content: center;
+  
+  font-size: x-large;
+  margin-left: 20vh;
+  font-weight: bold;
+  /* position: absolute; */
+  
+}
+#profilepic{
+  display: flex;
+  border-radius: 100vh;
+  border-style: solid;
+  width: 25vh;
+  position:fixed;
+  justify-content: left;
+  
+}
+
+#paragraph{
+  font-size: 3vh;
+  width: 500px;
+  margin-left: 25vh;
+  
+}
+.textgraph{
+  display: flex;
+  justify-content: center;
+}
+
+.experience{
+  margin-top: 20vh;
+  font-weight: bold;
+  font-size: 3vh;
 }
 
 
+/* HomePage.....  */
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+
+
